MG5_aMC_v2_4_2/MG5_debug
#************************************************************
#*                     MadGraph5_aMC@NLO                    *
#*                                                          *
#*                *                       *                 *
#*                  *        * *        *                   *
#*                    * * * * 5 * * * *                     *
#*                  *        * *        *                   *
#*                *                       *                 *
#*                                                          *
#*                                                          *
#*         VERSION 2.4.2                 2016-06-10         *
#*                                                          *
#*    The MadGraph5_aMC@NLO Development Team - Find us at   *
#*    https://server06.fynu.ucl.ac.be/projects/madgraph     *
#*                                                          *
#************************************************************
#*                                                          *
#*               Command File for MadGraph5_aMC@NLO         *
#*                                                          *
#*     run as ./bin/mg5_aMC  filename                       *
#*                                                          *
#************************************************************
set group_subprocesses Auto
set ignore_six_quark_processes False
set loop_optimized_output True
set low_mem_multicore_nlo_generation False
set loop_color_flows False
set gauge unitary
set complex_mass_scheme False
set max_npoint_for_channel 0
import model sm
define p = g u c d s u~ c~ d~ s~
define j = g u c d s u~ c~ d~ s~
define l+ = e+ mu+
define l- = e- mu-
define vl = ve vm vt
define vl~ = ve~ vm~ vt~
import model DarkphotonNuc_UFO_4
Traceback (most recent call last):
  File "/Users/zym/MG5_aMC_v2_4_2/madgraph/interface/extended_cmd.py", line 1009, in onecmd
    return self.onecmd_orig(line, **opt)
  File "/Users/zym/MG5_aMC_v2_4_2/madgraph/interface/extended_cmd.py", line 964, in onecmd_orig
    return func(arg, **opt)
  File "/Users/zym/MG5_aMC_v2_4_2/madgraph/interface/master_interface.py", line 266, in do_import
    self.cmd.do_import(self, *args, **opts)
  File "/Users/zym/MG5_aMC_v2_4_2/madgraph/interface/madgraph_interface.py", line 4898, in do_import
    complex_mass_scheme=self.options['complex_mass_scheme'])
  File "/Users/zym/MG5_aMC_v2_4_2/models/import_ufo.py", line 129, in import_model
    model = import_full_model(model_path, decay, prefix)
  File "/Users/zym/MG5_aMC_v2_4_2/models/import_ufo.py", line 266, in import_full_model
    ufo_model = ufomodels.load_model(model_path, decay)
  File "/Users/zym/MG5_aMC_v2_4_2/models/__init__.py", line 39, in load_model
    __import__(path_split[-1])
  File "/Users/zym/MG5_aMC_v2_4_2/models/DarkphotonNuc_UFO_4/__init__.py", line 4, in <module>
    import lorentz
  File "/Users/zym/MG5_aMC_v2_4_2/models/DarkphotonNuc_UFO_4/lorentz.py", line 34
    formfactors = [ForFac.AAA]))
                               ^
SyntaxError: invalid syntax
                          MadGraph5_aMC@NLO Options    
                          ----------------    
        complex_mass_scheme 	:	False
                      gauge 	:	unitary
         group_subprocesses 	:	Auto
  ignore_six_quark_processes 	:	False
           loop_color_flows 	:	False
      loop_optimized_output 	:	True
  low_mem_multicore_nlo_generation 	:	False
     max_npoint_for_channel 	:	0
               stdout_level 	:	20 (user set)

                         MadEvent Options    
                          ----------------    
     automatic_html_opening 	:	True
                    nb_core 	:	None
        notification_center 	:	True
                   run_mode 	:	2

                      Configuration Options    
                      ---------------------    
                        OLP 	:	MadLoop
                    amcfast 	:	amcfast-config
                   applgrid 	:	applgrid-config
                auto_update 	:	7
         cluster_local_path 	:	None
           cluster_nb_retry 	:	1
              cluster_queue 	:	None (user set)
         cluster_retry_wait 	:	300
               cluster_size 	:	100
      cluster_status_update 	:	(600, 30)
          cluster_temp_path 	:	None
               cluster_type 	:	condor
               cpp_compiler 	:	None
               delphes_path 	:	./Delphes
                 eps_viewer 	:	None
        exrootanalysis_path 	:	./ExRootAnalysis
              f2py_compiler 	:	None
                    fastjet 	:	fastjet-config
           fortran_compiler 	:	None
                      golem 	:	None (user set)
                 hepmc_path 	:	None (user set)
                  hwpp_path 	:	None (user set)
                     lhapdf 	:	lhapdf-config
           madanalysis_path 	:	./MadAnalysis
                      ninja 	:	./HEPTools/lib
        output_dependencies 	:	external
                      pjfry 	:	None (user set)
            pythia-pgs_path 	:	./pythia-pgs
               pythia8_path 	:	None (user set)
                    samurai 	:	None
               syscalc_path 	:	./SysCalc
                    td_path 	:	./td
                text_editor 	:	None
                thepeg_path 	:	None (user set)
                    timeout 	:	60
                web_browser 	:	None
